--- a/.htaccess
+++ b/.htaccess
@@ -5,42 +5,23 @@ RewriteEngine On
 
 # Security: Prevent access to sensitive files
 <Files "*.json">
-    Order Deny,Allow
-    Deny from all
+    Require all denied
 </Files>
 
 <Files "config.php">
-    Order Deny,Allow
-    Deny from all
+    Require all denied
+</Files>
+
+<Files "add_user.php">
+    Require all denied
+</Files>
+
+<Files "setup.php">
+    Require all denied
 </Files>
 
 # Security: Prevent directory browsing
 Options -Indexes
 
-# Security: Hide server information
-ServerTokens Prod
-
-# Performance: Enable compression
-<IfModule mod_deflate.c>
-    AddOutputFilterByType DEFLATE text/html text/css text/javascript application/javascript application/json
-</IfModule>
-
-# Performance: Set cache headers for static files
-<IfModule mod_expires.c>
-    ExpiresActive On
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-    ExpiresByType image/png "access plus 1 month"
-    ExpiresByType image/jpg "access plus 1 month"
-    ExpiresByType image/jpeg "access plus 1 month"
-    ExpiresByType image/gif "access plus 1 month"
-</IfModule>
-
-# Security: Prevent hotlinking
-RewriteCond %{HTTP_REFERER} !^$
-RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?yourdomain.com [NC]
-RewriteRule \.(jpg|jpeg|png|gif|css|js)$ - [NC,F,L]
-
-# Error pages
-ErrorDocument 404 /404.php
-ErrorDocument 500 /500.php
+# Error pages (adjust paths as needed)
+ErrorDocument 404 /trailstatus/404.php
